# math-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: docify.yml  test.yml
examples/: big_int_set_string.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.UpperHex.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
math/: all.html  index.html  sidebar-items.js
math/big/: constant.MAX_BASE.html  fn.jacobi.html  index.html  sidebar-items.js  struct.Int.html  type.Word.html
math/big/int/: fn.jacobi.html  struct.Int.html
math/bits/: constant.UINT_SIZE.html  fn.add.html  fn.add32.html  fn.add64.html  fn.div.html  fn.div32.html  fn.div64.html  fn.sub.html  fn.sub32.html  fn.sub64.html  index.html  sidebar-items.js
src/: lib.rs
src/big/: arith.rs  mod.rs  nat.rs
src/big/int/: mod.rs
src/bits/: mod.rs
src/math/: lib.rs.html
src/math/big/: arith.rs.html  mod.rs.html  nat.rs.html
src/math/big/int/: mod.rs.html
src/math/bits/: mod.rs.html
tests/: big_int.rs  big_int_conv.rs
tests/helper/: mod.rs  rand.rs
