[package]
name = "math-rs"
version = "0.1.0"
authors = ["sammyne <lixiangmin01@baidu.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "math"

[dependencies]
num-bigint = "0.2.5"
num-traits = "0.2.11"
num-integer = "0.1.42"