[package]
name = "math-rs"
version = "0.1.0"
authors = ["xiangminli <xiangminli@alumni.sjtu.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "math"

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.3"
num-integer = "0.1"
num-traits = "0.2.15"

[dev-dependencies]
getrandom = "0.2.9"
